# camos

./: .bazelrc  BUILD  DEVELOPMENT.md  MODULE.bazel
cc_toolchains/none/: BUILD  defs.bzl
cc_toolchains/uefi/: BUILD  defs.bzl
crates/camos_bootinfo/: BUILD  Cargo.toml
crates/camos_bootinfo/src/: lib.rs
crates/camos_kernel/: BUILD  Cargo.toml
crates/camos_kernel/src/: dynamic_alloc.rs  lib.rs  main.rs  memory_map.rs  phys_alloc.rs  spinlock.rs
crates/camos_uefi/: BUILD  Cargo.toml  trampoline.asm
crates/camos_uefi/src/: acpi.rs  main.rs  output.rs
scripts/: discover_bazel_rust_project.sh  run_qemu.sh
