bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_rust", version = "0.61.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.86.0"],
    extra_target_triples = [
        "x86_64-unknown-uefi",
        "x86_64-unknown-none",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate"
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/camos_uefi:Cargo.toml",
        "//crates/camos_kernel:Cargo.toml",
        "//crates/camos_bootinfo:Cargo.toml",
    ],
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-uefi",
        "x86_64-unknown-none",
    ],
)
use_repo(crate, "crates")


register_toolchains("//cc_toolchains/none:all", "//cc_toolchains/uefi:all")
