bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_platform", version = "0.1.0")
bazel_dep(name = "rules_rust", version = "0.61.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.86.0"],
    extra_target_triples = [
        "x86_64-unknown-uefi",
        "x86_64-unknown-none",
    ],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
)

# TODO: Make impl core::Error without nightly flag
crate.spec(package = "elf", version = "0.7.4", default_features = False)
crate.spec(package = "thiserror", version = "2.0.12", default_features = False)
crate.spec(package = "uefi", version = "0.35.0")
crate.spec(package = "x86_64", version = "0.15.2", default_features = False)
crate.spec(package = "uart_16550", version = "0.3.2")

crate.from_specs(
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "x86_64-unknown-uefi",
        "x86_64-unknown-none",
    ],
)
use_repo(crate, "crates")

register_toolchains("//cc_toolchains/none:all", "//cc_toolchains/uefi:all")
