[package]
name = "camos_uefi"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: Make impl core::Error without nightly flag
elf = { version = "0.7.4", default-features = false, features = ["nightly"]}
thiserror = { version = "2.0.12", default-features = false }
uefi = "0.35.0"
x86_64 = "0.15.2"
